refactor: clear out tests remove markdown doclet & remove submodules